[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/fruits.gd" type="Script" id=1]
[ext_resource path="res://assets/PineApple_Idle0001.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 62.8023

[node name="pineApple" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2, 7 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 8.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="sprite0" type="Sprite" parent="."]

transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="collisionShape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 2, 7 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="body1" type="RigidBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 15.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="sprite1" type="Sprite" parent="body1"]

transform/pos = Vector2( -35, 0 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 234, 474 )

[node name="body2" type="RigidBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 15.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="sprite2" type="Sprite" parent="body2"]

transform/pos = Vector2( 35, 0 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 234, 0, 234, 474 )


